fix: fix overflow scrolling

--- a/src/pages/OrderSummaryPage/OrderSummaryPage.scss
+++ b/src/pages/OrderSummaryPage/OrderSummaryPage.scss
@@ -45,6 +45,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  max-height: 420px;
+  overflow-y: auto;
   row-gap: 30px;
   border-radius: 8px;
 
@@ -61,6 +63,7 @@
     height: 550px;
     padding: 24px;
     background-color: $cold-ash;
+    overflow-y: auto;
 
     @include castShadow();
   }
